Update OpenAPI, rename GPS params
